--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -38,7 +38,7 @@ block content
                 div.card-text
                   p.alert-warning.p-1 Calendar Page error: resolve by reloading page - in progress
                   p.alert-info.p-1 Working on CHD multiday tours
-                  p.alert-warning.p-1 Remember to use testing email addresses when adding new customers or tour guides info.
+                  p.alert-warning.p-1 Remember to use STAGING email addresses when adding new customers or tour guides info.
                   p.alert-success.p-1 OP booking email updated to bookings@gocape.co.za
                   hr
                   //- p.alert-info Remote DB ref changed to DEV DB so no conflict.
