--- a/views/user.pug
+++ b/views/user.pug
@@ -14,6 +14,8 @@ block content
             p loggedInEmail: #{loggedInEmail} 
             p Authed: #{isAuthenticated} 
             p Profile Info: #{userProfile} 
+            p Meta: #{userProfile} 
+
             //- p publicGlobalToken: #{publicGlobalToken} 
             //-p Logged in as: #{test}  
             //-p Logged in as: #{userProfile.emails[0].value}  
