--- a/views/head.pug
+++ b/views/head.pug
@@ -23,14 +23,14 @@ html
     div.outerWrap
       div.container-fluid.bg-white.p-0
         header
-        if isAuthenticated
-          div#errormessages
-            //- p.alert.alert-success(role="alert") #{taskNotificationMsg}  
-          include menu
-          
-          main  
-            div.view
-              div.container-fluid
+        //-if isAuthenticated
+        div#errormessages
+          //- p.alert.alert-success(role="alert") #{taskNotificationMsg}  
+        include menu
+        
+        main  
+          div.view
+            div.container-fluid
         block content
         block footer  
           div.text-white.p-2.small(style="background-color: #334a39")
