good base, routes work, deps set, view set

--- a/views/add.pug
+++ b/views/add.pug
@@ -2,6 +2,8 @@ extends head
 block scripts
   script(src="/custom.js")
 block content
+  block menu
+    include menu
   div.addBooking
     div.container-fluid.bg-white.py-2 
       div.row.view.addView
