--- a/views/bookingsList.pug
+++ b/views/bookingsList.pug
@@ -1,5 +1,7 @@
 extends head
 block content
+  block menu
+    include menu
   div.bookingsList
     div.container-fluid.bg-white.py-2
       div.view.bookingsList
