--- a/public/style.css
+++ b/public/style.css
@@ -15,6 +15,14 @@
   box-sizing: border-box;
 }
 
+html {
+  background: url(homeBk.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 body {
   width: 100%;
   min-height: 100% !important;
@@ -28,9 +36,9 @@ body {
   display: flex;
   flex-direction: column;
   font-family: var(--core-font);
-  background: url("homeBk.jpg") left bottom;
-  background-size: cover;
-  background-position: 0% 0%;
+/*   background: url("homeBk.jpg") left bottom no-repeat;
+  background-attachment: scroll;
+  background-position: 50% 0%; */
 }
 
 h1, h2, h3 {
@@ -83,16 +91,15 @@ a {
 .welcomeMessage {
   background: white;
   opacity: 0.85;
-  padding: 30px;
+  /*   padding: 30px;
   border-bottom: var(--ui-shawdow-border);
-  border-radius: 10px;
+  border-radius: 10px; */
   box-shadow: var(--ui-shawdow);
-  text-align: center;
   position: absolute;
-  height: 150px;
+  height: auto;
   width: 400px;
   margin: -150px 0 0 -200px;
-  top: 50%;
+  top: 30%;
   left: 50%;
 }
 
