--- a/views/head.pug
+++ b/views/head.pug
@@ -26,12 +26,10 @@ html
         //-if isAuthenticated
         div#errormessages
           //- p.alert.alert-success(role="alert") #{taskNotificationMsg}  
-        include menu
-        
         main  
           div.view
             div.container-fluid
         block content
-        block footer  
-          div.text-white.p-2.small(style="background-color: #334a39")
-            div WTCT Helper app v.1.1 | Please report bugs in a snaglist
+          block footer  
+            div.text-white.p-2.small(style="background-color: #334a39")
+              div WTCT Helper app v.1.1
