--- a/views/index.pug
+++ b/views/index.pug
@@ -7,9 +7,8 @@ block content
       a.btn.btn-primary-outline(href="/dashboard") Logged in already.  
         a(href="/dashboard") Go to the dashboard.
     else
-      p.small Contact admin to activate your account.
+      p.small #{msg}
       a.btn.btn-primary(href="/login") Get Started
-  block footer  
 //- div.container.bg-white.p-0
   div.alert.alert-success(role='alert')
     p
