--- a/views/users.pug
+++ b/views/users.pug
@@ -2,6 +2,8 @@ extends head
 block variables
   - var test='test value'
 block content
+  block menu
+    include menu
   div.userPage
     div.container-fluid.bg-white.py-2
       div.view.userPage
