agenda view v1 finished

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -2,52 +2,10 @@ extends head
 block content
   block menu
     include menu
-  div.dashBoard
-    div.container-fluid.bg-white.py-2
+  div.container.bg-white.py-2
+    div.dashBoard
       div.view.dashBoardPage
-        div.row.col-md-12
-          div.col-md-8
-            h3 #{viewTitle}
-          div.col-md-4.text-right
-            div
-              a.btn.btn.btn-primary(href="/add") 
-                i.fa.fa-plus-square
-                span  Add a Booking
-              a.btn.btn-outline-info.mx-2(href="/list")  
-                  i.fa.fa-list-alt
-                  span  View All 
+        div test
         div.clearfix
-        div.row.col-md-12.small
-          div.col-md-3
-            div.card.my-0 
-              div.card-header User Details
-              div.card-body
-                //- h5.card-title #{userProfile}
-                //- p.card-text Name: #{name}
-                p.card-text Logged in as: 
-                 span= email
-                p.card-text Account Type: 
-                  span= role
-                p= id
-                p= message
-                p= count + ' open bookings'
-                //- p.card-text publicGlobalToken: #{publicGlobalToken}
-            div
-              div.card.my-3 
-                div.card-header Bookings
-                div.card-body
-                  p.card-text Total Bookings: #{count} 
-                  a(href='/list') View All
-          div.col-md-4 
-            div.card.my-0 
-              div.card-header Messages, Notes / Major Changes
-              div.card-body
-                div.card-text
-                  p.alert-danger.p-1= taskNotificationMsg
-                  p.alert-warning.p-1 Calendar Page error: resolve by reloading page - in progress
-                  p.alert-info.p-1 Working on CHD multiday tours
-                  p.alert-warning.p-1 Remember to use STAGING email addresses when adding new customers or tour guides info.
-                  p.alert-success.p-1 OP booking email updated to bookings@gocape.co.za
-                  hr
-                  //- p.alert-info Remote DB ref changed to DEV DB so no conflict.
-
+        div.row.col
+          
