--- a/views/login.pug
+++ b/views/login.pug
@@ -2,7 +2,7 @@ extends head
 block variables
   - var test='test value'
 block content
-  div.welcomeMessage
+  div.welcomeMessage.d-flex.justify-content-center
     div.userPage
       div.container-sm.bg-white.py-2
         div.view.userPage
