--- a/public/style.css
+++ b/public/style.css
@@ -3,7 +3,7 @@
   --logo-font: "Share Tech Mono", monospace;
   --header-font: "Raleway", sans-serif;
   --core-font: "Merriweather Sans", sans-serif;
-  --primary: #ffffff;
+  --primary: #28a745;
   --secondary: #2a3747;
   --highlight: #fa4141;
   --ui-shawdow: 0 2px 4px -1px rgba(0, 0, 0, 0.06), 0 4px 5px 0 rgba(0, 0, 0, 0.06), 0 1px 10px 0 rgba(0, 0, 0, 0.08);
@@ -36,7 +36,7 @@ body {
   display: flex;
   flex-direction: column;
   font-family: var(--core-font);
-/*   background: url("homeBk.jpg") left bottom no-repeat;
+  /*   background: url("homeBk.jpg") left bottom no-repeat;
   background-attachment: scroll;
   background-position: 50% 0%; */
 }
@@ -52,13 +52,15 @@ h1, h2, h3 {
 h1 {
   font-size: 40px;
 }
+h4{ font-size: 1.2em;}
 
-a {
-  color: inherit;
-  text-decoration: none;
-  cursor: pointer;
-  user-select: none;
+/* a:link, a:active, a:visited {
+  color: #1e7e34;
 }
+
+a:hover {
+  color: '#1e7e34';
+} */
 
 #root {}
 
@@ -178,8 +180,7 @@ div.header {
 
 nav.navbar {
   background-color: #334a39;
-  border-top: solid #28a745 1px;
-  border-bottom: solid #28a745 1px;
+  padding: 0;
 }
 
 .topnav {
@@ -209,6 +210,11 @@ nav.navbar {
 
 .topnav .icon {
   display: none;
+}
+
+.navbar-brand {
+  margin: 0;
+  padding: 0;
 }
 
 @media screen and (max-width: 600px) {
@@ -289,6 +295,7 @@ div.userDetailsBar {
   font-size: 0.8rem;
   background-color: #203125;
   color: white;
+  border-bottom: solid #28a745 1px
 }
 
 .editOption {
