--- a/views/edit.pug
+++ b/views/edit.pug
@@ -5,7 +5,7 @@ block content
   block menu
     include menu
   div.addBooking
-    div.container-fluid.bg-white.py-2 
+    div.container.bg-white.py-2 
       div.row.view.bookingsList
         div.col-md-12.offset-md-0
           h3 #{viewTitle}
@@ -179,15 +179,15 @@ block content
                 div.text-danger #{booking.referrerError}
             div.form-row
               div.form-row.col-md-10
-                div.col-md-3
+                div.col
                   button.btn.btn-block.btn-primary(type='submit' href="/edit/" + booking._id ) 
                     i.fa.fa-plus-square(aria-hidden=true)
                     span  Update   
-                div.col-md-2
+                div.col
                   a.btn.btn-block.btn-outline-info(href="/list")  
                     i.fa.fa-list-alt(aria-hidden=true)
                     span  View All.. 
-                div.col-md-3 
+                div.col
                   pre DB ID: 
                     b= `${booking._id}` 
                             
