--- a/views/bookingsList.pug
+++ b/views/bookingsList.pug
@@ -3,92 +3,109 @@ block content
   block menu
     include menu
   div.bookingsList
-    div.container-fluid.bg-white.py-2
-      div.view.bookingsList
-        div.flex-container.flex-row
-          div.title.flex-grow-1.float-left 
-            h3 #{viewTitle}
-            if saveUnsuccessful
-              p.alert.alert-danger(role="alert") #{saveUnsuccessful}
-            else if saveSuccessful
-              p.alert.alert-success(role="alert") #{saveSuccessful}
-          div.p-2.actionMenu-2.float-right
-            a(href="/add")
-              button.px-5.btn.btn-primary
-                i.fa.fa-plus-square(aria-hidden=true)
-                span  Add a Booking
-          //-div.p-2.actionMenu-2.float-right
-              button.btn.btn-block.btn-danger(type='submit' form='bookingsToDelete' value='Submit' ) 
-                //- href="/add/" + booking._id 
-                i.fa.fa-minus-square(aria-hidden=true)
-                  span  Delete
-          div.p-2.actionMenu-2.float-right
-            button#delete.btn.btn-danger(type='submit' form='bookingsToDelete' value='Submit' onclick="return confirmDelete()")
-              //-i.fa.fa-minus-square(aria-hidden=true)  
-              span Delete 
-              span.deleteCounter.badge.badge-light
-        table#list.table-sm.table.small
-          thead.thead-dark.small
-            tr
-              th 
-              th Tour Date
-              th Name
-              //-> th Last
-              th Pickup
-              th Pax
-              th Paid  
-              th Phone
-              th Email
-              th OP
-              th Type
-              th Guide
-              th Notes
-              th 
-              th 
-              th Booked
-              th Referrer
-          form#bookingsToDelete(
-            action='/list/batchDelete'
-            method='POST'
-            autocomplete='off'
-            )
-            tbody
-              each doc in list
-                -var id = doc._id;
-                tr
-                  td 
-                    input.form-control(type='checkbox' name='ids[]' id='doc._id' value=doc._id onclick='return selectedForDelete();' )
-                  td.bg-blue= doc.tourDate
-                  td
+    div.container-sm.py-2
+      div.d-flex
+        div.mr-auto
+          h3 #{viewTitle}
+          if saveUnsuccessful
+            p.alert.alert-danger(role="alert") #{saveUnsuccessful}
+          else if saveSuccessful
+            p.alert.alert-success(role="alert") #{saveSuccessful}
+        div.p-2.actionMenu-2
+          a(href="/add")
+            button.btn.btn-success
+              //-i.fa.fa-plus-square(aria-hidden=true)
+              span  Add
+        div.p-2.actionMenu-2
+          button#delete.btn.btn-danger(type='submit' form='bookingsToDelete' value='Submit' onclick="return confirmDelete()")
+            //-i.fa.fa-minus-square(aria-hidden=true)  
+            span Delete 
+            span.deleteCounter.badge.badge-light
+      p.small Best viewed on a desktop
+      div.d-flex
+        div.bg-white.py-2
+          div.small.d-flex.justify-content-between
+            div 
+            div Tour Date
+            div Name
+            div Pick Up
+            div Pax
+            div Paid
+            div Phone
+            div Email
+            div OP
+            div Type
+            div Guide
+            div Notes
+            div
+            div
+            div Booked
+            div Referrer
+          each doc in list
+            -var id = doc._id;
+            -var days = ['Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat'];
+            -var d = new Date (doc.tourDate)
+            -let dayName = days[d.getDay()];
+            if dayName == 'Sun' 
+              -var dayColor='Blue'
+            if dayName == 'Mon' 
+              -var dayColor='Coral'
+            if dayName == 'Tue' 
+              -var dayColor='Crimson'
+            if dayName == 'Wed' 
+              -var dayColor='DarkOrchid'
+            if dayName == 'Thu' 
+              -var dayColor='LimeGreen'
+            if dayName == 'Fri' 
+              -var dayColor='DeepSkyBlue'
+            if dayName == 'Sat' 
+              -var dayColor='OliveDrab'
+            div.mt-3.pl-3(style='border-left: solid ' + dayColor +  ' 5px;')
+              div
+                form#bookingsToDelete(
+                  action='/list/batchDelete'
+                  method='POST'
+                  autocomplete='off'
+                  )
+                div#allList.d-flex.justify-content-between
+                  div
+                    input.form-control(type='checkbox' name='ids[]' id='doc._id' value=doc._id onclick='return selectedForDelete();' ) 
+                  div
+                    span.h2.badge.badge-success.mr-2.text-white()= dayName 
+                      div
+                        span.small()= doc.tourDate 
+                  div.small
                     a(href="/edit/" + doc._id)
                       b= doc.firstName + ' ' + doc.lastName
-                  //- td= doc.lastName
-                  td  
+                  div.small
                     a(data-toggle="popover" title="Pickup Address" data-content= doc.pickupAddress
                     ) 
                       u View
-                  td= doc.pax
-                  td= doc.paidStatus
-                  td= doc.phone
-                  td= doc.customerEmail
-                  td= doc.operatorName
-                  td= doc.tourType
-                  td
-                    a(data-toggle="popover" title="Guide Details" data-html="true" data-content= doc.guidesName + '<br> ' + doc.guidesEmail
+                  div.small
+                    span.h3.badge.badge-success.text-white.ml-2.align-self-center=  'x ' + doc.pax
+                  div.small= doc.paidStatus
+                  div.small= doc.phone
+                  div.small= doc.customerEmail
+                  div.small= doc.operatorName
+                  div.small= doc.tourType
+                  div.small
+                    a(data-toggle="popover" title="Guide Details" data-html="true" data-content= doc.guidesName + 'br( ' + doc.guidesEmail
                       ) 
                         u View
-                  td
+                  div.small
                     a(data-toggle="popover" title="Notes" data-html="true" data-content= doc.notes
                       ) 
                         u View
-                  td
+                  div
                     a.btn.btn-outline-info.btn-sm(href="/edit/" + doc._id)
                       i.fa.fa-pencil.fa-xs(
                       aria-hidden=true data-toggle="tooltip" data-placement="top" title="Edit booking"
-                      )  
-                  td
+                      )
+                  div
                     a.btn.btn-outline-danger.btn-sm( href="/delete/" + doc._id onclick="return confirmDelete()")
-                      i.fa.fa-trash.fa-xs(aria-hidden=true data-toggle="tooltip" data-placement="top" title="Delete booking")                        
-                  td= doc.dateBooked
-                  td= doc.referrer
-                  
+                      i.fa.fa-trash.fa-xs(aria-hidden=true data-toggle="tooltip" data-placement="top" title="Delete booking")
+                  div.small= doc.dateBooked
+                  div.small= doc.referrer
+              hr
+
+          
