--- a/views/head.pug
+++ b/views/head.pug
@@ -11,7 +11,7 @@ html
     meta(meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
     meta(name="theme-color", content="#000000")
     title #{title} | WTCT Team Portal
-    link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css")
+    script(src="https://kit.fontawesome.com/bd2f50ba72.js" crossorigin="anonymous")
     link(rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.css")
     link(rel="stylesheet" href="/style.css")
     script(src="https://code.jquery.com/jquery-3.3.1.slim.min.js")
@@ -21,7 +21,7 @@ html
     script(src="/custom.js")
   body
     div.outerWrap
-      div.container-fluid.bg-white.p-0
+      div.container-fluid.p-0
         header
         //-if isAuthenticated
         div#errormessages
