--- a/views/menu.pug
+++ b/views/menu.pug
@@ -1,6 +1,8 @@
 div.header
-  div.alert-danger.text-center.p-1.small= infoMsg
-  div.alert-info.text-center.p-1.small= warnMsg
+  if infoMsg
+    div.alert-info.text-center.p-1.small= infoMsg
+  if warnMsg
+    div.alert-danger.text-center.p-1.small= warnMsg
   div.userDetailsBar.py-2.text-right
     div.container
       i.fa.fa-user.px-1  
@@ -33,7 +35,7 @@ div.header
                 ) Dashboard 
               //- span.sr-only current
             li.nav-item  
-              a.nav-link(href="/add") Add New
+              a.nav-link(href="/add") Add
             li.nav-item
               a.nav-link(
                 href='/calendar'
@@ -46,22 +48,21 @@ div.header
               ) Tools
               div.dropdown-menu(aria-labelledby="navbarDropdown")
                 a.dropdown-item(href="/user/" + id) User Details
-                a.dropdown-item(href="/users") All Users
-                a.dropdown-item.disabled(href='/logs') lorem
                 div.dropdown-divider
-                a.dropdown-item lorem
+                a.dropdown-item(href="/users") Admins: All Users
+                //-a.dropdown-item.disabled(href='/logs') lorem
 
 div.container
   div.d-flex
-    form.form-inline.my-2.my-lg-0#searchBox(
-      action='/search/' +   q
+    form.form-inline.my-2#searchBox(
+      action='/search/' +  q
       method='GET'
       )
         div.input-group
           input.form-control(type='text', placeholder='Search by name or email', aria-label='Search', id='q' name='q' 
                   )
           div.input-group-append
-            button.btn.btn-success(type='submit' id='submit' name="submit") Find
+            button.btn.btn-secondary(type='submit' id='submit' name="submit") Find
           div.input-group-append 
-            a.btn.btn.btn-secondary(href="/add") 
+            a.btn.btn.btn-light(href="/add") 
               span  Add New 
