--- a/views/menu.pug
+++ b/views/menu.pug
@@ -1,8 +1,8 @@
 div.header
+  if siteMsg
+    div.alert-info.text-center.p-1.small= siteMsg
   if infoMsg
     div.alert-info.text-center.p-1.small= infoMsg
-  if warnMsg
-    div.alert-danger.text-center.p-1.small= warnMsg
   div.userDetailsBar.py-2.text-right
     div.container
       i.fa.fa-user.px-1  
@@ -34,8 +34,9 @@ div.header
                 href='/dashboard'
                 ) Dashboard 
               //- span.sr-only current
-            li.nav-item  
-              a.nav-link(href="/add") Add
+            if role == 'admin'
+              li.nav-item  
+                a.nav-link(href="/add") Add
             if role == 'basic'
               li.nav-item
                 a.nav-link(
@@ -76,3 +77,6 @@ div.container
           div.input-group-append 
             a.btn.btn.btn-light(href="/add") 
               span  Add New 
+
+  if warnMsg
+    div.alert-danger.text-center.p-1.small= warnMsg
