--- a/views/bookingsList.pug
+++ b/views/bookingsList.pug
@@ -16,61 +16,57 @@ block content
             button.btn.btn-success
               //-i.fa.fa-plus-square(aria-hidden=true)
               span  Add
-        div.p-2.actionMenu-2
-          button#delete.btn.btn-danger(type='submit' form='bookingsToDelete' value='Submit' onclick="return confirmDelete()")
-            //-i.fa.fa-minus-square(aria-hidden=true)  
-            span Delete 
-            span.deleteCounter.badge.badge-light
-      p.small Best viewed on a desktop
-      if list.length
-        div.d-flex
-          div.bg-white.py-2
-            div.small.d-flex.justify-content-between
-              div 
-              div Tour Date
-              div Name
-              div Pick Up
-              div Pax
-              div Paid
-              div Phone
-              div Email
-              div OP
-              div Type
-              div Guide
-              div Notes
-              div
-              div
-              div Booked
-              div Referrer
-            each doc in list
-              -var id = doc._id;
-              -var days = ['Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat'];
-              -var d = new Date (doc.tourDate)
-              -let dayName = days[d.getDay()];
-              if dayName == 'Sun' 
-                -var dayColor='Blue'
-              if dayName == 'Mon' 
-                -var dayColor='Coral'
-              if dayName == 'Tue' 
-                -var dayColor='Crimson'
-              if dayName == 'Wed' 
-                -var dayColor='DarkOrchid'
-              if dayName == 'Thu' 
-                -var dayColor='LimeGreen'
-              if dayName == 'Fri' 
-                -var dayColor='DeepSkyBlue'
-              if dayName == 'Sat' 
-                -var dayColor='OliveDrab'
-              div.mt-3.pl-3(style='border-left: solid ' + dayColor +  ' 5px;')
-                div
-                  form#bookingsToDelete(
-                    action='/list/batchDelete'
-                    method='POST'
-                    autocomplete='off'
-                    )
+        if role == 'admin'
+          div.p-2.actionMenu-2
+            button#delete.btn.btn-danger(type='submit' form='bookingsToDelete' value='Submit' onclick="return confirmDelete()")
+              span Delete 
+              span.deleteCounter.badge.badge-light
+      p.small Best viewed on a desktop or go to agenda view for a more mobile friendly view.
+      form#bookingsToDelete(action='/list/batchDelete' method='POST' autocomplete='off')  
+        if list.length
+          div.d-flex
+            div.container.bg-white.py-2
+              div.small.d-flex.justify-content-around
+                div #
+                div Tour Date
+                div Name
+                div Pick Up
+                div Pax
+                div Paid
+                div Phone
+                div Email
+                div OP
+                div Type
+                div Guide
+                div Notes
+                div #
+                div #
+                div Booked
+                div Referrer
+              each doc in list
+                -var id = doc._id;
+                -var days = ['Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat'];
+                -var d = new Date (doc.tourDate)
+                -let dayName = days[d.getDay()];
+                if dayName == 'Sun' 
+                  -var dayColor='Blue'
+                if dayName == 'Mon' 
+                  -var dayColor='Coral'
+                if dayName == 'Tue' 
+                  -var dayColor='Crimson'
+                if dayName == 'Wed' 
+                  -var dayColor='DarkOrchid'
+                if dayName == 'Thu' 
+                  -var dayColor='LimeGreen'
+                if dayName == 'Fri' 
+                  -var dayColor='DeepSkyBlue'
+                if dayName == 'Sat' 
+                  -var dayColor='OliveDrab'
+                div.mt-3(style='border-left: solid ' + dayColor +  ' 5px;')
                   div#allList.d-flex.justify-content-between
                     div
-                      input.form-control(type='checkbox' name='ids[]' id='doc._id' value=doc._id onclick='return selectedForDelete();' ) 
+                      if role == 'admin'
+                        input(type='checkbox' name='ids[]' id='doc._id' value=doc._id onclick='return selectedForDelete();' ) 
                     div
                       span.h2.badge.badge-success.mr-2.text-white()= dayName 
                         div
@@ -102,9 +98,10 @@ block content
                         i.fa.fa-pencil.fa-xs(
                         aria-hidden=true data-toggle="tooltip" data-placement="top" title="Edit booking"
                         )
-                    div
-                      a.btn.btn-outline-danger.btn-sm( href="/delete/" + doc._id onclick="return confirmDelete()")
-                        i.fa.fa-trash.fa-xs(aria-hidden=true data-toggle="tooltip" data-placement="top" title="Delete booking")
+                    if role == 'admin'
+                      div
+                        a.btn.btn-outline-danger.btn-sm( href="/delete/" + doc._id onclick="return confirmDelete()")
+                          i.fa.fa-trash.fa-xs(aria-hidden=true data-toggle="tooltip" data-placement="top" title="Delete booking")
                     div.small= doc.dateBooked
                     div.small= doc.referrer
                 hr
